src/scss/footer.scss
footer {
  margin-top: 80px;
  padding: 36px 16px;
  background: #13183f;
  height: 120px;

  display: flex;
  justify-content: space-between;
  align-items: center;

  @media screen and (min-width: 768px) {
    padding: 36px 39px 36px 40px;
  }

  @media screen and (min-width: 1200px) {
    padding: 32px 165px;
  }
}

.footer__logo__text {
  font-weight: 800;
  font-size: 28px;
  line-height: 35px;

  color: #ffffff;

  @media screen and (min-width: 1200px) {
    font-size: 36px;
    line-height: 45px;
  }
}

.footer__btn {
  background: linear-gradient(180deg, #4851ff 0%, #f02aa6 100%);
  border-radius: 28px;

  padding: 9px 24px 11px 24px;

  border: none;

  font-weight: 700;
  font-size: 16px;
  line-height: 28px;

  height: 48px;

  color: #ffffff;

  cursor: pointer;

  position: relative;
  z-index: 1;

  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;

    opacity: 0;

    z-index: -1;
    height: 100%;
    width: 100%;
    background: linear-gradient(
        0deg,
        rgba(255, 255, 255, 0.5),
        rgba(255, 255, 255, 0.5)
      ),
      linear-gradient(180deg, #4851ff -54.32%, #f02aa6 100%);

    transition: opacity 0.4s;

    border-radius: 28px;
  }

  &:hover::before {
    opacity: 1;
  }

  @media screen and (min-width: 1200px) {
    width: 167px;
    height: 56px;

    font-size: 18px;
    line-height: 28px;

    padding: 14px 31px 14px 31px;
  }
}

